--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "full stack user manager",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
+    "start": "concurrently --kill-others \"npm run server\" \"npm run client\"",
+    "server": "nodemon --exec ts-node src/index.ts",
+    "client": "npm run start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "cd client && npm install"
   },
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
+    "concurrently": "^7.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2"
