--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon --exec ts-node src/index.ts",
     "client": "npm run start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd client && npm install"
+    "seedDb": "npx sqlite3 db.sqlite3 < users_db.sql",
+    "postinstall": "npm run seedDb && cd client && npm install"
   },
   "author": "",
   "license": "ISC",
@@ -18,15 +19,23 @@
     "express": "^4.17.3",
     "graphql": "^15.8.0",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.44",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "5.13.0",
     "concurrently": "^7.0.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
     "ts-node": "^10.6.0",
-    "typescript": "^4.6.2"
+    "typescript": "4.6.2"
   }
 }
