--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
-  }
+    "experimentalDecorators": true,
+    "target": "ES2015",
+    "module": "CommonJS"
+  },
+  "exclude": ["node_modules", "client/node_modules"]
 }
