--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.44",
-    "uuid": "^8.3.2"
+    "typeorm": "^0.2.44"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "concurrently": "^7.0.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
