User resolvers + adding photo relation to user model

--- a/package.json
+++ b/package.json
@@ -6,24 +6,29 @@
   "scripts": {
     "start": "concurrently --kill-others \"npm run server\" \"npm run client\"",
     "server": "nodemon --exec ts-node src/index.ts",
+    "serverDebug": "nodemon --exec node --inspect-brk -r ts-node/register src/index.ts",
+    "generateClientTypes": "graphql-codegen",
     "client": "npm run start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seedDb": "npx sqlite3 db.sqlite3 < users_db.sql",
+    "seedDb": "npx sqlite3 db.sqlite3 < mock_user_data.sql",
     "postinstall": "npm run seedDb && cd client && npm install"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-codegen/typescript": "^2.4.7",
+    "@graphql-codegen/typescript-operations": "^2.3.4",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.10",
     "apollo-server-express": "^3.6.3",
     "class-validator": "^0.13.2",
     "express": "^4.17.3",
-    "graphql": "^15.8.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.44"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -32,6 +37,7 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "graphql": "^15.8.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-node": "^10.6.0",
