Generalizes modal component and derives open state from currently editing user. Adds basic user form

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -30,6 +30,7 @@
         "semi": true
       }
     ],
+    "no-debugger": "warn",
     "simple-import-sort/imports": "warn",
     "simple-import-sort/exports": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
