--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.2.10",
     "apollo-server-express": "^3.6.3",
     "class-validator": "^0.13.2",
+    "date-fns": "^2.28.0",
     "express": "^4.17.3",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.42.1",
@@ -38,6 +39,7 @@
     "concurrently": "^7.0.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.0.0",
     "graphql": "^15.8.0",
     "nodemon": "^2.0.15",
