--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@googlemaps/react-wrapper": "^1.1.27",
+    "@googlemaps/typescript-guards": "^1.0.10",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -39,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@types/google.maps": "^3.48.2",
+    "@types/googlemaps": "^3.43.3",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "cypress": "^9.5.2",
