--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-validator": "^0.13.2",
     "date-fns": "^2.28.0",
     "express": "^4.17.3",
+    "fast-equals": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.42.1",
     "sqlite3": "^5.0.2",
