--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.11",
     "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/google.maps": "^3.48.2",
     "@types/googlemaps": "^3.43.3",
+    "@types/lodash.debounce": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "cypress": "^9.5.2",
