--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^2.28.0",
     "express": "^4.17.3",
     "fast-equals": "^3.0.0",
+    "lodash.debounce": "^4.0.8",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.42.1",
     "sqlite3": "^5.0.2",
