--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router": "^5.1.18",
     "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
     "lodash.debounce": "^4.0.8",
