--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client": "npm run start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seedDb": "npx sqlite3 db.sqlite3 < mock_user_data.sql",
-    "postinstall": "npm run seedDb && cd client && npm install"
+    "postinstall": "cd client && npm install"
   },
   "author": "",
   "license": "ISC",
