--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,6 @@
     "@apollo/client": "^3.5.10",
     "@googlemaps/react-wrapper": "^1.1.27",
     "@googlemaps/typescript-guards": "^1.0.10",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
@@ -25,9 +22,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "npx cypress open",
     "eject": "react-scripts eject"
   },
   "browserslist": {
@@ -57,6 +54,7 @@
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "react-app-rewired": "^2.2.1"
   }
 }
